# lib/db/src/schema/users.ts
@@ -5,8 +5,9 @@ import { z } from "zod/v4";
 export const usersTable = pgTable("users", {
   id: serial("id").primaryKey(),
   username: text("username").notNull().unique(),
-  email: text("email"),
+  email: text("email").notNull().unique(),
   passwordHash: text("password_hash").notNull(),
+  sheetLink: text("sheet_link").notNull(),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
 });
 
